# eslint-plugin-boundaries-rust

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release-prebuilds.yml
native/: Cargo.toml
native/src/: lib.rs
scripts/: smoke-pack.cjs
src/: index.cjs  native-loader.cjs  settings.cjs
src/configs/: recommended.cjs  strict.cjs
src/rules/: _policy.cjs  _shared.cjs  _stub-rule.cjs  element-types.cjs  entry-point.cjs  external.cjs  index.cjs  no-ignored.cjs  no-private.cjs  no-unknown-files.cjs  no-unknown.cjs
test/: _lint-utils.cjs  parity.test.cjs  plugin.test.cjs
test/fixtures/monorepo/: tsconfig.base.json  tsconfig.json
test/fixtures/rules/src/components/button/: index.ts  private.ts
test/fixtures/rules/src/feature/: consumer.ts  entry-consumer.ts  external-consumer.ts  public-entry-consumer.ts
test/fixtures/rules/src/ignored/: tmp.ts
