[package]
name = "eslint_plugin_boundaries_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
globset = "0.4.15"
napi = { version = "2.16.13", features = ["napi8"] }
napi-derive = "2.16.13"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[build-dependencies]
napi-build = "2.1.4"
